# DUCTEI

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
conformance/: verify.c
conformance/emitter/: Cargo.toml
conformance/emitter/src/: main.rs
ductei-core/: Cargo.toml  build.rs
ductei-core/proto/: qsw_channel.proto
ductei-core/src/: gate.rs  grpc.rs  lib.rs  pq.rs  quic.rs  transport.rs
ductei-core/tests/: suite.rs
ductei-limen/: Cargo.toml
ductei-limen/src/: lib.rs
ductei-qallow/: Cargo.toml
ductei-qallow/src/: ingest.rs  lib.rs  v2.rs
ductei-veyn/: Cargo.toml
ductei-veyn/src/: lib.rs
scripts/: smoke_e2e.py  smoke_qallow.py  smoke_veyn.py
