[package]
name = "ductei-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
[dev-dependencies]
ductei-limen = { path = "../ductei-limen" }
ductei-qallow = { path = "../ductei-qallow" }
ductei-veyn = { path = "../ductei-veyn" }
