[package]
name = "ductei-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
[features]
grpc = ["dep:tonic", "dep:prost", "dep:tokio", "dep:tonic-build", "dep:protoc-bin-vendored"]
quic = ["dep:quinn", "dep:rustls", "dep:rcgen", "dep:tokio"]
pq = ["dep:pqcrypto-mlkem", "dep:pqcrypto-traits"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "time"], optional = true }
quinn = { version = "0.11", optional = true }
rustls = { version = "0.23", features = ["ring"], optional = true }
rcgen = { version = "0.13", optional = true }
pqcrypto-mlkem = { version = "0.1", optional = true }
pqcrypto-traits = { version = "0.3", optional = true }

[build-dependencies]
tonic-build = { version = "0.12", optional = true }
protoc-bin-vendored = { version = "3", optional = true }

[dev-dependencies]
ductei-limen = { path = "../ductei-limen" }
ductei-qallow = { path = "../ductei-qallow" }
ductei-veyn = { path = "../ductei-veyn" }
